--- a/initializr-service/src/main/resources/application.yml
+++ b/initializr-service/src/main/resources/application.yml
@@ -79,6 +79,14 @@ initializr:
           - versionRange: "2.0.x.BUILD-SNAPSHOT"
             version: Finchley.BUILD-SNAPSHOT
             repositories: spring-snapshots,spring-milestones
+      spring-cloud-gcp:
+        groupId: org.springframework.cloud
+        artifactId: spring-cloud-gcp-dependencies
+        versionProperty: spring-cloud-gcp.version
+        mappings:
+          - versionRange: "1.0.0.M3"
+            version: 1.0.0.M3
+            repositories: spring-milestones
       spring-cloud-services:
         groupId: io.pivotal.spring.cloud
         artifactId: spring-cloud-services-dependencies
@@ -1238,6 +1246,38 @@ initializr:
           versionRange: "[1.3.0.RELEASE,2.0.0.M1)"
           groupId: org.springframework.boot
           artifactId: spring-boot-actuator-docs
+    - name: Spring Cloud GCP
+      bom: spring-cloud-gcp
+      versionRange: 2.0.0.RELEASE
+      content:
+        - name: GCP Support
+          id: cloud-gcp
+          description: Support for Google Cloud Platform services
+          groupId: org.springframework.cloud
+          artifactId: spring-cloud-gcp-starter
+          links:
+            - rel: reference
+              href: https://docs.spring.io/spring-cloud-gcp/docs/1.0.0.M3/reference/htmlsingle/
+              description: Reference doc
+        - name: GCP Messaging
+          id: cloud-gcp-pubsub
+          description: GCP Pub/Sub service integration
+          groupId: org.springframework.cloud
+          artifactId: spring-cloud-gcp-starter-pubsub
+          links:
+            - rel: reference
+              href: https://docs.spring.io/spring-cloud-gcp/docs/1.0.0.M3/reference/htmlsingle/#_spring_cloud_gcp_for_pub_sub
+              description: Reference document
+        - name: GCP Storage
+          id: cloud-gcp-storage
+          description: GCP Storage service integration
+          groupId: org.springframework.cloud
+          artifactId: spring-cloud-gcp-starter-storage
+          links:
+            - rel: reference
+              href: https://docs.spring.io/spring-cloud-gcp/docs/1.0.0.M3/reference/htmlsingle/#_spring_resources
+              description: Reference doc
+
   types:
     - name: Maven Project
       id: maven-project
