--- a/initializr-generator/src/main/resources/project/gradle4/gradle/wrapper/gradle-wrapper.properties
+++ b/initializr-generator/src/main/resources/project/gradle4/gradle/wrapper/gradle-wrapper.properties
@@ -1,6 +1,6 @@
-#Fri Jul 28 13:37:07 BST 2017
+#Tue Feb 06 12:27:20 CET 2018
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
-distributionUrl=https\://services.gradle.org/distributions/gradle-4.2-bin.zip
+distributionUrl=https\://services.gradle.org/distributions/gradle-4.5.1-bin.zip
