Enable strict null-safety for Kotlin projects
Closes gh-591

--- a/initializr-generator/src/main/resources/templates/starter-build.gradle
+++ b/initializr-generator/src/main/resources/templates/starter-build.gradle
@@ -46,13 +46,15 @@ apply plugin: 'war'
 
 group = '{{groupId}}'
 version = '{{version}}'
-sourceCompatibility = {{javaVersion}}{{#kotlin}}{{#java8OrLater}}
+sourceCompatibility = {{javaVersion}}{{#kotlin}}
 compileKotlin {
-	kotlinOptions.jvmTarget = "1.8"
+	freeCompilerArgs = ["-Xjsr305=strict"]{{#java8OrLater}}
+	kotlinOptions.jvmTarget = "1.8"{{/java8OrLater}}
 }
 compileTestKotlin {
-	kotlinOptions.jvmTarget = "1.8"
-}{{/java8OrLater}}{{/kotlin}}
+	freeCompilerArgs = ["-Xjsr305=strict"]{{#java8OrLater}}
+	kotlinOptions.jvmTarget = "1.8"{{/java8OrLater}}
+}{{/kotlin}}
 
 repositories {
 	mavenCentral()
