--- a/initializr-service/src/main/resources/application.yml
+++ b/initializr-service/src/main/resources/application.yml
@@ -96,7 +96,10 @@ initializr:
           - versionRange: "[2.0.0.RC1, 2.0.0.RC1]"
             version: Finchley.M6
             repositories: spring-milestones
-          - versionRange: "2.0.0.RC2"
+          - versionRange: "[2.0.0.RC2,2.0.0.RC2]"
+            version: Finchley.M7
+            repositories: spring-milestones
+          - versionRange: "2.0.0.BUILD-SNAPSHOT"
             version: Finchley.BUILD-SNAPSHOT
             repositories: spring-snapshots,spring-milestones
       spring-cloud-services:
