Polish "Remove spring-cloud-contract-wiremock dependency"
Closes gh-629

--- a/initializr-service/src/main/resources/application.yml
+++ b/initializr-service/src/main/resources/application.yml
@@ -1030,7 +1030,7 @@ initializr:
           starter: false
         - name: Cloud Contract Stub Runner
           id: cloud-contract-stub-runner
-          description: Stub Runner for HTTP/Messaging based communication, allows creating WireMock stubs from RestDocs tests
+          description: Stub Runner for HTTP/Messaging based communication. Allows creating WireMock stubs from RestDocs tests
           groupId: org.springframework.cloud
           artifactId: spring-cloud-starter-contract-stub-runner
           scope: test
