Fix version range for Spring Cloud

--- a/initializr-service/src/main/resources/application.yml
+++ b/initializr-service/src/main/resources/application.yml
@@ -73,10 +73,10 @@ initializr:
           - versionRange: "[2.0.0.RC2,2.0.0.RC2]"
             version: Finchley.M7
             repositories: spring-milestones
-          - versionRange: "[2.0.0.RELEASE,2.0.0.RELEASE]"
+          - versionRange: "[2.0.0.RELEASE,2.0.x.RELEASE]"
             version: Finchley.M9
             repositories: spring-milestones
-          - versionRange: "2.0.0.BUILD-SNAPSHOT"
+          - versionRange: "2.0.x.BUILD-SNAPSHOT"
             version: Finchley.BUILD-SNAPSHOT
             repositories: spring-snapshots,spring-milestones
       spring-cloud-services:
