--- a/initializr-service/src/main/resources/application.yml
+++ b/initializr-service/src/main/resources/application.yml
@@ -106,10 +106,10 @@ initializr:
             version: 1.1.2.RELEASE
           - versionRange: "[1.5.0.RC1, 2.0.0.M1)"
             version: 1.2.2.RELEASE
-          - versionRange: "[2.0.0.M2, 2.0.0.BUILD-SNAPSHOT)"
+          - versionRange: "[2.0.0.M2, 2.0.0.RELEASE)"
             version: 2.0.0.M3
             repositories: spring-milestones
-          - versionRange: "2.0.0.BUILD-SNAPSHOT"
+          - versionRange: "2.0.0.RELEASE"
             version: 2.0.0.BUILD-SNAPSHOT
             repositories: spring-snapshots,spring-milestones
       spring-statemachine:
