Add Eclipse IDE support files
Add additional files to make development with Eclipse easier.

--- a/initializr-docs/pom.xml
+++ b/initializr-docs/pom.xml
@@ -11,6 +11,7 @@
 	<name>Spring Initializr :: Docs</name>
 
 	<properties>
+		<main.basedir>${basedir}/..</main.basedir>
 		<snippets.location>${project.build.directory}/snippets</snippets.location>
 	</properties>
 
