--- a/initializr-service/pom.xml
+++ b/initializr-service/pom.xml
@@ -10,6 +10,10 @@
 	<artifactId>initializr-service</artifactId>
 	<name>Spring Initializr :: Service</name>
 
+	<properties>
+		<main.basedir>${basedir}/..</main.basedir>
+	</properties>
+
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
