Add support for Java 10
Closes gh-646

--- a/initializr-service/src/main/resources/application.yml
+++ b/initializr-service/src/main/resources/application.yml
@@ -1340,6 +1340,8 @@ initializr:
       id: war
       default: false
   javaVersions:
+    - id: 10
+      default: false
     - id: 9
       default: false
     - id: 1.8
