Upgrade to Spring Cloud Finchley.RC1
Closes gh-660

--- a/initializr-service/src/main/resources/application.yml
+++ b/initializr-service/src/main/resources/application.yml
@@ -77,8 +77,11 @@ initializr:
           - versionRange: "[2.0.0.RC2,2.0.0.RC2]"
             version: Finchley.M7
             repositories: spring-milestones
-          - versionRange: "[2.0.0.RELEASE,2.0.x.RELEASE]"
+          - versionRange: "[2.0.0.RELEASE,2.0.0.RELEASE]"
             version: Finchley.M9
+            repositories: spring-milestones
+          - versionRange: "[2.0.1.RELEASE,2.0.x.RELEASE]"
+            version: Finchley.RC1
             repositories: spring-milestones
           - versionRange: "2.0.x.BUILD-SNAPSHOT"
             version: Finchley.BUILD-SNAPSHOT
