Upgrade to Spring Cloud Task 2.0.0.RELEASE

--- a/initializr-service/src/main/resources/application.yml
+++ b/initializr-service/src/main/resources/application.yml
@@ -126,12 +126,8 @@ initializr:
           - versionRange: "[2.0.0.M2, 2.0.0.RELEASE)"
             version: 2.0.0.M3
             repositories: spring-milestones
-          - versionRange: "[2.0.0.RELEASE,2.0.x.RELEASE]"
-            version: 2.0.0.RC1
-            repositories: spring-milestones
-          - versionRange: "2.0.x.BUILD-SNAPSHOT"
-            version: 2.0.0.BUILD-SNAPSHOT
-            repositories: spring-snapshots,spring-milestones
+          - versionRange: "2.0.0.RELEASE"
+            version: 2.0.0.RELEASE
       spring-statemachine:
         groupId: org.springframework.statemachine
         artifactId: spring-statemachine-bom
