--- a/initializr-service/src/main/resources/application.yml
+++ b/initializr-service/src/main/resources/application.yml
@@ -80,10 +80,10 @@ initializr:
           - versionRange: "[2.0.0.RELEASE,2.0.0.RELEASE]"
             version: Finchley.M9
             repositories: spring-milestones
-          - versionRange: "[2.0.1.RELEASE,2.0.x.RELEASE]"
+          - versionRange: "[2.0.1.RELEASE,2.0.2.RELEASE)"
             version: Finchley.RC1
             repositories: spring-milestones
-          - versionRange: "2.0.x.BUILD-SNAPSHOT"
+          - versionRange: "2.0.2.RELEASE"
             version: Finchley.BUILD-SNAPSHOT
             repositories: spring-snapshots,spring-milestones
       spring-cloud-gcp:
