--- a/initializr-service/src/main/resources/application.yml
+++ b/initializr-service/src/main/resources/application.yml
@@ -106,7 +106,7 @@ initializr:
           - versionRange: "[1.5.0.RELEASE,1.5.x.BUILD-SNAPSHOT]"
             version: 1.6.3.RELEASE
           - versionRange: "[2.0.0.RELEASE,2.0.x.RELEASE]"
-            version: 2.0.0.M1
+            version: 2.0.0.RC1
             repositories: spring-milestones
           - versionRange: "2.0.x.BUILD-SNAPSHOT"
             version: 2.0.0.BUILD-SNAPSHOT
