Move initializr-docs to docs profile
This commit disables the `initializr-docs` module unless the `docs` or
`full` profile is active. It is a follow-up of e3d9c3c7837 that can lead
to failure with an empty repo as tests in `initializr-docs` are
attempting to resolve the snippets.

See gh-665

--- a/pom.xml
+++ b/pom.xml
@@ -45,7 +45,6 @@
 
 	<modules>
 		<module>initializr-actuator</module>
-		<module>initializr-docs</module>
 		<module>initializr-generator</module>
 		<module>initializr-web</module>
 	</modules>
@@ -231,8 +230,15 @@
 
 	<profiles>
 		<profile>
+			<id>docs</id>
+			<modules>
+				<module>initializr-docs</module>
+			</modules>
+		</profile>
+		<profile>
 			<id>full</id>
 			<modules>
+				<module>initializr-docs</module>
 				<module>initializr-service</module>
 			</modules>
 		</profile>
